--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^7.6.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sanitize-html": "^2.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
