Base de datos desplegada

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL=mongodb+srv://Julio:CiNenEGWWE1xuvyw@cluster1.j7ro6k3.mongodb.net/
+URL=mongodb+srv://Julio:QDJmUG7DvdUnYiFT@cluster2.rcnflvw.mongodb.net/?retryWrites=true&w=majority
 PORT=9000
