--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 URL=mongodb+srv://Julio:QDJmUG7DvdUnYiFT@cluster2.rcnflvw.mongodb.net/?retryWrites=true&w=majority
 PORT=9000
+URL_API=https://api-aboweb-yenter.onrender.com
